<resources>
    <string name="app_name">CheckRootDeviceTest</string>

    <string name="root_utils_checks_1">CHECK ROOT METHOD 1</string>
    <string name="root_utils_checks_2">CHECK ROOT METHOD 2</string>
    <string name="root_utils_checks_3">CHECK ROOT METHOD 3</string>
    <string name="root_utils_checks_4">CHECK ROOT METHOD 4</string>

    <string name="root_checks_1">ROOT MANAGEMENT APPS</string>
    <string name="root_checks_2">POTENTIALLY DANGEROUS APPS</string>
    <string name="root_checks_3">TEST KEYS</string>
    <string name="root_checks_4">BUSYBOX BINARY</string>
    <string name="root_checks_5">SU BINARY</string>
    <string name="root_checks_6">SU EXISTS</string>
    <string name="root_checks_7">RW PATHS</string>
    <string name="root_checks_8">DANGEROUS PROPS</string>
    <string name="root_checks_9">ROOT NATIVE</string>
    <string name="root_checks_10">ROOT CLOAKING APPS</string>
    <string name="root_checks_11">SELINUX FLAG ENABLED (EXPERIMENTAL)</string>
</resources>
